--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -47,4 +47,9 @@ button {
     font-size: 1rem;
     font-weight: bold;
   }
+
+  & .count-badge.transparent {
+      color: transparent;
+      background: transparent;
+  }
 }
